basic design fixes

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                     <div class="col-md-6 d-none d-md-block cust-animation-div">
                         <div class="main_img_div">
                             <img src="img/main.jpg" class="main_img" alt="">
+                            <div class="main-img-overlay"></div>
                             <div class="main_img_card">
                                 <div class="main_img_card_circle_div">
                                     <div class="red_circle"></div>
@@ -408,7 +409,7 @@
                 <h4 class="c_heading">Professional Experience</h4>
                 <p class="c_line"></p>
                 <p class="c_description">My journey and growth as a Laravel developer</p>
-                <div class="pb-5">
+                <div class="pb-0 pb-md-5">
                     <div class="timeline">
 
                         <div class="timeline-item timeline-left">
@@ -617,9 +618,9 @@
                 <p class="c_line"></p>
                 <p class="c_description">Have a project in mind or want to discuss opportunities? Feel free to reach
                     out!</p>
-                <div class="pb-5">
+                <div class="pb-0 pb-md-5">
                     <dic class="row">
-                        <div class="col-md-6 cust-animation-div">
+                        <div class="col-md-6 cust-animation-div con-div-1">
                             <div>
                                 <h4 class="con_head_1">Contact Information</h4>
                                 <div class="mb-3">
@@ -701,48 +702,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6 cust-animation-div">
-                            <div class="c_form_container">
-                                <p class="form_header">Send a Message</p>
-                                <div class="c_form">
-
-                                    <div class="input_div">
-                                        <label for="">Name</label>
-                                        <input type="text">
-                                        <!-- <p class="input_err">There is an error</p> -->
-                                    </div>
-                                    <div class="input_div">
-                                        <label for="">Email</label>
-                                        <input type="email">
-                                        <!-- <p class="input_err">There is an error</p> -->
-                                    </div>
-                                    <div class="input_div">
-                                        <label for="">Subject</label>
-                                        <input type="text">
-                                        <!-- <p class="input_err">There is an error</p> -->
-                                    </div>
-                                    <div class="input_div">
-                                        <label for="">Message</label>
-                                        <textarea name="message" id="dsa" rows="3"></textarea>
-                                        <!-- <p class="input_err">There is an error</p> -->
-                                    </div>
-
-                                    <button type="submit" class="cbtn cbtn-danger cust_submit">Send Message
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                            stroke-linecap="round" stroke-linejoin="round"
-                                            class="lucide lucide-send ml-2 h-4 w-4"
-                                            data-lov-id="src/components/Contact.tsx:158:16" data-lov-name="Send"
-                                            data-component-path="src/components/Contact.tsx" data-component-line="158"
-                                            data-component-file="Contact.tsx" data-component-name="Send"
-                                            data-component-content="%7B%22className%22%3A%22ml-2%20h-4%20w-4%22%7D">
-                                            <path
-                                                d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z">
-                                            </path>
-                                            <path d="m21.854 2.147-10.94 10.939"></path>
-                                        </svg>
-                                    </button>
-
+                        <div class="col-md-6 cust-animation-div con-div-2">
+                            <div class="con_image_div">
+                                <img src="./img/con-1.jpg" class="con-img" alt="">
+                                <div class="con-img-overlay"></div>
+                                <div class="con-img-txt">
+                                    <h5>Ready to collaborate?</h5>
+                                    <p>Reach out via email or phone to discuss your project needs.</p>
                                 </div>
                             </div>
                         </div>
