--- a/index.html
+++ b/index.html
@@ -208,12 +208,12 @@
         </section>
 
         <section class="skills_section" id="skills_section">
-            <div class="skills_container pb-4">
+            <div class="skills_container pb-1 pb-md-4">
                 <h4 class="c_heading">My Skills</h4>
                 <p class="c_line"></p>
                 <p class="c_description">A showcase of my technical expertise and proficiency</p>
 
-                <div class="skill_div mb-5">
+                <div class="skill_div">
                     <div class="row">
 
                         <div class="col-md-4 mb-5 mb-md-0 cust-animation-div">
@@ -405,7 +405,7 @@
         </section>
 
         <section class="exp_section" id="exp_section">
-            <div class="exp_container pb-5">
+            <div class="exp_container pb-1 pb-md-5">
                 <h4 class="c_heading">Professional Experience</h4>
                 <p class="c_line"></p>
                 <p class="c_description">My journey and growth as a Laravel developer</p>
@@ -613,7 +613,7 @@
         </section>
 
         <section class="con_section" id="con_section">
-            <div class="con_container pb-5">
+            <div class="con_container pb-1 pb-md-4">
                 <h3 class="c_heading">Get In Touch</h3>
                 <p class="c_line"></p>
                 <p class="c_description">Have a project in mind or want to discuss opportunities? Feel free to reach
