--- a/index.html
+++ b/index.html
@@ -143,14 +143,12 @@
                     </div>
                     <div class="col-md-6 mt-5 mt-md-0 cust-animation-div">
                         <h5 class="cont_heading">PHP Developer & Web Enthusiast</h5>
-                        <p class="cont_desc">I am a Web Developer with four years of experience, demonstrating expertise
-                            in crafting
-                            robust and scalable solutions. I describe myself as a passionate developer who loves coding,
-                            a tech enthusiast, and one who tends to learn new technologies.
+                        <p class="cont_desc">As a Web Developer with over four years of experience, I specialize in
+                            crafting robust and scalable solutions. I'm passionate about coding, enthusiastic about
+                            technology, and committed to continuous learning.
                         </p>
                         <p class="cont_desc">I am adept at collaborating with team members to achieve shared objectives,
-                            leveraging
-                            strong interpersonal skills to contribute effectively to collaborative projects.
+                            leveraging strong interpersonal skills to contribute effectively to collaborative projects.
                         </p>
 
                         <div class="row">
@@ -182,7 +180,7 @@
                                         <polyline points="16 18 22 12 16 6"></polyline>
                                         <polyline points="8 6 2 12 8 18"></polyline>
                                     </svg>
-                                    <h5 class="as_heading">20+ Projects</h5>
+                                    <h5 class="as_heading">25+ Projects</h5>
                                     <p class="as_description mb-0">Completed</p>
                                 </div>
                             </div>
@@ -466,13 +464,13 @@
                                         </svg>
                                         <p>May 2022 - Present</p>
                                     </div>
-                                    <p>Leading development team in creating robust web applications</p>
+                                    <p>Lead a development team in creating robust web applications.</p>
                                     <strong class="mb-5">KEY HIGHLIGHTS:</strong>
                                     <ul class="exp_details_list">
-                                        <li>Led six-person development team</li>
-                                        <li>Designed databases for web applications</li>
-                                        <li>Implemented RESTful APIs</li>
-                                        <li>Client communication and requirement analysis</li>
+                                        <li>Led a six-member development team.</li>
+                                        <li>Designed and optimized databases for web applications.</li>
+                                        <li>Developed and integrated RESTful APIs.</li>
+                                        <li>Communicated with clients to gather and analyze requirements.</li>
                                     </ul>
                                 </div>
                             </div>
@@ -533,10 +531,11 @@
                                     <p>Developed and maintained client web applications</p>
                                     <strong class="mb-5">KEY HIGHLIGHTS:</strong>
                                     <ul class="exp_details_list">
-                                        <li>Built Laravel applications with MVC architecture</li>
-                                        <li>Integrated payment gateways</li>
-                                        <li>Created interactive forms with Livewire and Vue.js</li>
-                                        <li>Utilized AWS (RDS, S3, SES)</li>
+                                        <li>Developed Laravel applications following the MVC architecture.</li>
+                                        <li>Integrated various payment gateways to facilitate secure transactions.</li>
+                                        <li>Developed interactive forms using Laravel Livewire and Vue.js.</li>
+                                        <li>Leveraged AWS services such as EC2, RDS, S3, and SES for scalable solutions.
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -598,10 +597,10 @@
                                     <p>Supported development team on PHP/MySQL solutions</p>
                                     <strong class="mb-5">KEY HIGHLIGHTS:</strong>
                                     <ul class="exp_details_list">
-                                        <li>Developed web applications using PHP/MySQL</li>
-                                        <li>Frontend work with HTML, CSS, JavaScript</li>
-                                        <li>Participated in code reviews</li>
-                                        <li>Learned agile methodologies and version control</li>
+                                        <li>Assisted in developing web applications using PHP and MySQL.</li>
+                                        <li>Contributed to frontend development using HTML, CSS, and JavaScript.</li>
+                                        <li>Actively participated in code reviews to maintain code quality.</li>
+                                        <li>Gained experience in agile methodologies and version control systems.</li>
                                     </ul>
                                 </div>
                             </div>
@@ -695,8 +694,8 @@
                                 <div class="mb-3 mt-4">
                                     <div class="con-desc mb-5 mb-md-0">
                                         <h5>Let's Build Something Amazing Together</h5>
-                                        <p>Whether you need a custom web application, e-commerce solution, or API
-                                            integration, I'm here to help turn your ideas into reality with clean,
+                                        <p>Whether you require a custom web application, an e-commerce solution, or API
+                                            integration, I am here to transform your ideas into reality using clean,
                                             efficient code and modern web technologies.</p>
                                     </div>
                                 </div>
