--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portpolio</title>
+
+    <meta name="description"
+        content="Tirumani Nadar - Frontend Developer Portfolio showcasing projects, skills, and achievements in web development.">
+    <meta name="keywords"
+        content="Tirumani Nadar, frontend developer, web developer, portfolio, JavaScript, HTML, CSS, React">
+    <meta name="author" content="Tirumani Nadar">
+
+    <meta property="og:title" content="Tirumani Nadar | Frontend Developer" />
+    <meta property="og:description"
+        content="Explore the portfolio of Tirumani Nadar, a passionate frontend developer." />
+    <meta property="og:image" content="https://tirumaninadar.github.io/icons/fav/favicon-32x32.png" />
+    <meta property="og:url" content="https://tirumaninadar.github.io/portfolio/" />
+    <meta property="og:type" content="website" />
+
+    <title>Tirumani Nadar | Full-Stack Web Developer</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-
 
     <link rel="apple-touch-icon" sizes="180x180" href="./icons/fav/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./icons/fav/favicon-32x32.png">
@@ -54,7 +68,7 @@
                                 <button class="">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                         fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                        stroke-linejoin="round" class="lucide lucide-download mr-2 h-4 w-4">
+                                        stroke-linejoin="round" class="cv_svg">
                                         <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
                                         <polyline points="7 10 12 15 17 10"></polyline>
                                         <line x1="12" x2="12" y1="15" y2="3"></line>
@@ -73,7 +87,7 @@
                 <div class="row align-items-center mt-1 mt-md-4 mb-4">
                     <div class="col-md-6 cust-animation-div">
                         <p class="lwd_main">Laravel Web Developer</p>
-                        <h1 class="tn_main text-typing">Tirumani Nadar</h1>
+                        <h1 class="tn_main" id="text_typing_js">Tirumani Nadar</h1>
                         <h4 class="fs_main">Full-Stack</h4>
                         <h4 class="wd_main mb-3">Web Developer</h4>
                         <p class="desc_main pb-3">Passionate about building robust and scalable web applications with
