--- a/index.html
+++ b/index.html
@@ -100,19 +100,19 @@
                             <h6 class="ts_main">Tech Stack</h6>
                             <div class="ts_list_div">
                                 <div class="ts_list">
-                                    <img src="img/laravel.svg" alt="">
+                                    <img src="img/laravel.svg" alt="Laravel">
                                     <p>Laravel</p>
                                 </div>
                                 <div class="ts_list">
-                                    <img src="img/php.svg" alt="" class="php_svg">
+                                    <img src="img/php.svg" alt="PHP" class="php_svg">
                                     <p>PHP</p>
                                 </div>
                                 <div class="ts_list">
-                                    <img src="img/mysql.svg" alt="">
+                                    <img src="img/mysql.svg" alt="MySQL">
                                     <p>MySQL</p>
                                 </div>
                                 <div class="ts_list">
-                                    <img src="img/vue-js.svg" alt="">
+                                    <img src="img/vue-js.svg" alt="Vue.js">
                                     <p>Vue.js</p>
                                 </div>
                             </div>
@@ -120,7 +120,7 @@
                     </div>
                     <div class="col-md-6 d-none d-md-block cust-animation-div">
                         <div class="main_img_div">
-                            <img src="img/main.jpg" class="main_img" alt="">
+                            <img src="img/main.jpg" class="main_img" alt="Image">
                             <div class="main-img-overlay"></div>
                             <div class="main_img_card">
                                 <div class="main_img_card_circle_div">
@@ -151,7 +151,7 @@
                 <div class="row pb-5">
                     <div class="col-md-6 mb-4 mb-md-0 cust-animation-div">
                         <div class="about_img_div">
-                            <img src="img/about.jpg" alt="" class="about_img">
+                            <img src="img/about.jpg" alt="About Image" class="about_img">
                             <div class="about_img_circle">4+ Years</div>
                         </div>
                     </div>
@@ -717,7 +717,7 @@
                         </div>
                         <div class="col-md-6 cust-animation-div con-div-2">
                             <div class="con_image_div">
-                                <img src="./img/con-1.jpg" class="con-img" alt="">
+                                <img src="./img/con-1.jpg" class="con-img" alt="Contact Img">
                                 <div class="con-img-overlay"></div>
                                 <div class="con-img-txt">
                                     <h5>Ready to collaborate?</h5>
