contact details fix

--- a/index.html
+++ b/index.html
@@ -654,7 +654,9 @@
                                         </div>
                                         <div class="">
                                             <p class="ct_head_sub_1">Email</p>
-                                            <p class="ct_head_sub_2"><a href="">contact@gmail.com</a></p>
+                                            <p class="ct_head_sub_2"><a
+                                                    href="mailto:tirumaninadar1999@gmail.com">tirumaninadar1999@gmail.com</a>
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -677,7 +679,8 @@
                                         </div>
                                         <div class="">
                                             <p class="ct_head_sub_1">Phone</p>
-                                            <p class="ct_head_sub_2"><a href="">+1 (123) 456-7890</a></p>
+                                            <p class="ct_head_sub_2"><a href="tel:+918652759537">+91 8652 759 537</a>
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -746,7 +749,7 @@
                         </a>
                         <div>
                             <div class="foot_link_ico_list">
-                                <a href="" class="foot_a">
+                                <a href="https://github.com/TirumaniNadar" class="foot_a">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                         fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                         stroke-linejoin="round" class="" data-lov-id="src/components/Footer.tsx:22:14"
@@ -760,7 +763,7 @@
                                         <path d="M9 18c-4.51 2-5-2-7-2"></path>
                                     </svg>
                                 </a>
-                                <a href="" class="foot_a">
+                                <a href="mailto:tirumaninadar1999@gmail.com" class="foot_a">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                         fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                         stroke-linejoin="round" class="" data-lov-id="src/components/Footer.tsx:31:14"
