--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             Laravel, PHP, and modern
                             frontend technologies.</p>
                         <div class="btns mt-4 mb-5">
-                            <a href="" class="cbtn cbtn-danger">Contact</a>
+                            <a href="#con_section" class="cbtn cbtn-danger">Contact</a>
                         </div>
                         <div class="">
                             <h6 class="ts_main">Tech Stack</h6>
@@ -256,7 +256,7 @@
                                         <p class="mb-0">PHP</p>
                                     </div>
                                     <div class="sk_range_div">
-                                        <div class="sk_range bg-sk-light-voilet-100" style="width: 85%;"></div>
+                                        <div class="sk_range bg-sk-light-voilet-100" style="width: 88%;"></div>
                                     </div>
                                 </div>
                                 <div class="sk_list_card">
@@ -278,7 +278,7 @@
                                         <p class="mb-0">API Development</p>
                                     </div>
                                     <div class="sk_range_div">
-                                        <div class="sk_range bg-sk-dark-blue-100" style="width: 80%;"></div>
+                                        <div class="sk_range bg-sk-dark-blue-100" style="width: 70%;"></div>
                                     </div>
                                 </div>
                                 <div class="sk_list_card">
@@ -289,7 +289,7 @@
                                         <p class="mb-0">MVC Architecture</p>
                                     </div>
                                     <div class="sk_range_div">
-                                        <div class="sk_range bg-sk-dark-green-100" style="width: 82%;"></div>
+                                        <div class="sk_range bg-sk-dark-green-100" style="width: 74%;"></div>
                                     </div>
                                 </div>
 
@@ -313,7 +313,7 @@
                                         <p class="mb-0">Vue.js</p>
                                     </div>
                                     <div class="sk_range_div">
-                                        <div class="sk_range bg-sk-green-100" style="width: 85%;"></div>
+                                        <div class="sk_range bg-sk-green-100" style="width: 70%;"></div>
                                     </div>
                                 </div>
                                 <div class="sk_list_card">
@@ -324,7 +324,7 @@
                                         <p class="mb-0">Livewire</p>
                                     </div>
                                     <div class="sk_range_div">
-                                        <div class="sk_range bg-sk-voilet-100" style="width: 85%;"></div>
+                                        <div class="sk_range bg-sk-voilet-100" style="width: 65%;"></div>
                                     </div>
                                 </div>
                                 <div class="sk_list_card">
@@ -335,7 +335,7 @@
                                         <p class="mb-0">Javascript</p>
                                     </div>
                                     <div class="sk_range_div">
-                                        <div class="sk_range bg-sk-yellow-100" style="width: 75%;"></div>
+                                        <div class="sk_range bg-sk-yellow-100" style="width: 68%;"></div>
                                     </div>
                                 </div>
                                 <!-- <div class="sk_list_card">
@@ -357,7 +357,7 @@
                                         <p class="mb-0">HTML & CSS</p>
                                     </div>
                                     <div class="sk_range_div">
-                                        <div class="sk_range bg-sk-white-100" style="width: 82%;"></div>
+                                        <div class="sk_range bg-sk-white-100" style="width: 76%;"></div>
                                     </div>
                                 </div>
 
@@ -381,7 +381,7 @@
                                         <p class="mb-0">AWS Services</p>
                                     </div>
                                     <div class="sk_range_div">
-                                        <div class="sk_range bg-sk-yellow-100" style="width: 85%;"></div>
+                                        <div class="sk_range bg-sk-yellow-100" style="width: 72%;"></div>
                                     </div>
                                 </div>
                                 <div class="sk_list_card">
@@ -392,7 +392,7 @@
                                         <p class="mb-0">Git/GitHub</p>
                                     </div>
                                     <div class="sk_range_div">
-                                        <div class="sk_range bg-sk-white-100" style="width: 85%;"></div>
+                                        <div class="sk_range bg-sk-white-100" style="width: 74%;"></div>
                                     </div>
                                 </div>
                                 <div class="sk_list_card">
@@ -403,7 +403,7 @@
                                         <p class="mb-0">Server Management</p>
                                     </div>
                                     <div class="sk_range_div">
-                                        <div class="sk_range bg-sk-red-100" style="width: 75%;"></div>
+                                        <div class="sk_range bg-sk-red-100" style="width: 68%;"></div>
                                     </div>
                                 </div>
 
@@ -749,7 +749,7 @@
                         </a>
                         <div>
                             <div class="foot_link_ico_list">
-                                <a href="https://github.com/TirumaniNadar" class="foot_a">
+                                <a href="https://github.com/TirumaniNadar" target="_blank" class="foot_a">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                         fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                         stroke-linejoin="round" class="" data-lov-id="src/components/Footer.tsx:22:14"
@@ -763,7 +763,7 @@
                                         <path d="M9 18c-4.51 2-5-2-7-2"></path>
                                     </svg>
                                 </a>
-                                <a href="mailto:tirumaninadar1999@gmail.com" class="foot_a">
+                                <a href="mailto:tirumaninadar1999@gmail.com" target="_blank" class="foot_a">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                         fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                         stroke-linejoin="round" class="" data-lov-id="src/components/Footer.tsx:31:14"
