--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                                             <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
                                         </svg>
                                         <div>
-                                            <h3 class="mb-0">Senior Laravel Developer</h3>
+                                            <h3 class="mb-0">Team Lead - Full Stack Developer</h3>
                                             <div class="d-flex cust-exp-off">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                                     viewBox="0 0 24 24" fill="none" stroke="currentColor"
@@ -476,7 +476,7 @@
                                             <rect width="18" height="18" x="3" y="4" rx="2"></rect>
                                             <path d="M3 10h18"></path>
                                         </svg>
-                                        <p>May 2022 - Present</p>
+                                        <p>Feb 2023 - Present</p>
                                     </div>
                                     <p>Lead a development team in creating robust web applications.</p>
                                     <strong class="mb-5">KEY HIGHLIGHTS:</strong>
@@ -540,7 +540,7 @@
                                             <rect width="18" height="18" x="3" y="4" rx="2"></rect>
                                             <path d="M3 10h18"></path>
                                         </svg>
-                                        <p>June 2020 - April 2022</p>
+                                        <p>Feb 2022 - Feb 2023</p>
                                     </div>
                                     <p>Developed and maintained client web applications</p>
                                     <strong class="mb-5">KEY HIGHLIGHTS:</strong>
@@ -606,7 +606,7 @@
                                             <rect width="18" height="18" x="3" y="4" rx="2"></rect>
                                             <path d="M3 10h18"></path>
                                         </svg>
-                                        <p>May 2022 - Present</p>
+                                        <p>Feb 2021 - Feb 2022</p>
                                     </div>
                                     <p>Supported development team on PHP/MySQL solutions</p>
                                     <strong class="mb-5">KEY HIGHLIGHTS:</strong>
