--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                                         <div class="sk_inital bg-sk-light-blue-20">
                                             <span class="text-sk-light-blue-100">M</span>
                                         </div>
-                                        <p class="mb-0">MySql</p>
+                                        <p class="mb-0">MySQL</p>
                                     </div>
                                     <div class="sk_range_div">
                                         <div class="sk_range bg-sk-light-blue-100" style="width: 75%;"></div>
